--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,12 +1,12 @@
 {
   "about": {
-    "bug-reports": "Reporter un problème ou une amélioration :",
-    "bug-reports-back": "serveur, moteur de routage, app Android, profiles, site brouter.de :",
+    "bug-reports": "Rapporter un problème ou une amélioration :",
+    "bug-reports-back": "serveur, moteur de routage, appli Android, profils, site brouter.de :",
     "bug-reports-front": "client web :",
     "contact": "Contact :",
     "data": "Données :",
     "data-description": "Les données reposent sur <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. La mise à jour est généralement hebdomadaire, voir <a href=\"http://brouter.de/brouter/segments4/\" target=\"_blank\">les fichiers de données</a>. ",
-    "description": "Service web pour le moteur de routage BRouter. Pour l'app Android et de plus amples informations, voir <a href=\"http://brouter.de/\" target=\"_blank\">brouter.de</a>.",
+    "description": "Service web pour le moteur de routage BRouter. Pour l'appli Android et de plus amples informations, voir <a href=\"http://brouter.de/\" target=\"_blank\">brouter.de</a>.",
     "details": "<i><a href=\"http://brouter.de/privacypolicy.html\" target=\"_blank\">Respect de la vie privée</a></i>, \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">Crédits</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">Changements</a></i> et\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">plus d'infos</a></i> sur le client web.",
     "support": "Discussions/Questions générales, support :",
     "title": "À propos"
@@ -49,8 +49,8 @@
     "add-base": "Ajouter un fond de carte ",
     "add-overlay": "Ajouter un calque superposable",
     "customize": "Personnaliser les calques",
-    "placeholder-layer-name": "Nom du calque (ex : OpenStreetMap).",
-    "placeholder-layer-url": "URL du calque (ex : https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png).",
+    "placeholder-layer-name": "Nom du calque (p. ex. OpenStreetMap).",
+    "placeholder-layer-url": "URL du calque (p. ex. https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png).",
     "remove-selection": "Supprimer la sélection"
   },
   "map": {
@@ -65,7 +65,7 @@
     "draw-route-stop": "Arrêter de dessiner l'itinéraire (touche ECH)",
     "hiking": "Randonnée",
     "layer": {
-      "bing": "Aérienne BING",
+      "bing": "Imagerie aérienne BING",
       "cycle": "OpenCycleMap (Thunderf.)",
       "cycling": "Cycling (Sentiers balisés)",
       "digitalglobe": "Imagerie récente DigitalGlobe",
@@ -73,7 +73,7 @@
       "hiking": "Randonnée (Sentiers balisés)",
       "osm": "OpenStreetMap",
       "osmde": "OpenStreetMap.de",
-      "outdoors": "Plein air (Thunderforest)",
+      "outdoors": "Extérieur (Thunderforest)",
       "strava-segments": "Segments Strava",
       "topo": "OpenTopoMap"
     },
@@ -86,7 +86,7 @@
       "edit": "Cliquer pour éditer",
       "help": "&square; = déplacer / redimensionner, <span class=\"fa fa-trash-o\"></span> = supprimer,<br>cliquer sur le cercle pour arrêter l'édition"
     },
-    "opacity-slider": "Définie l'opacity de l'itinéraire et des marqueurs",
+    "opacity-slider": "Définie l'opacité de l'itinéraire et des marqueurs",
     "privacy": "Vie privée",
     "strava-biking": "Afficher les segments Strava vélo",
     "strava-running": "Afficher les segments Strava à pied",
@@ -126,14 +126,14 @@
       "trekking-ignore-cr": "Cycloutourisme (ignore pistes cyclables)",
       "trekking-noferries": "Cyclotourisme (pas de ferries)",
       "trekking-nosteps": "Cyclotourisme (pas d'escaliers)",
-      "trekking-steep": "Cyclotourisme escarpé",
-      "vm-forum-liegerad-schnell": "vm-forum-liegerad-schnell",
-      "vm-forum-velomobil-schnell": "vm-forum-velomobil-schnell"
+      "trekking-steep": "Cyclotourisme (escarpé)",
+      "vm-forum-liegerad-schnell": "Vélo couché (rapide)",
+      "vm-forum-velomobil-schnell": "Vélomobile (rapide)"
     }
   },
   "sidebar": {
     "custom-profile": {
-      "title": "Profile personnalisé"
+      "title": "Profil personnalisé"
     },
     "data": {
       "title": "Données"
@@ -155,7 +155,7 @@
     "profile": {
       "clear": "Nettoyer",
       "help": "Aide",
-      "placeholder": "Écrivez votre profile personnalisé ici.",
+      "placeholder": "Saisissez votre profil personnalisé ici.",
       "upload": "Envoyer"
     }
   },
@@ -163,9 +163,9 @@
   "warning": {
     "cannot-get-route": "Erreur lors de la réception de l'itinéraire",
     "no-response": "aucune réponse du serveur",
-    "no-route-found": "Erreur : impossible de trouver un itinéraire correspond. Essayez peut-être de rapprocher les points des routes ?",
-    "profile-error": "Erreur de profile : pas de réponse ou réponse invalide du serveur",
-    "temporary-profile": "<strong>Note :</strong> Les profiles personnalisés téléversés ne sont disponibles que temporairement sur le serveur.<br/>Merci de sauvegarder vorte profile sur votre ordinateur.",
-    "upload-error": "Erreur de téléversement : {{error}}"
+    "no-route-found": "Erreur : impossible de trouver un itinéraire correspondant aux points donnés. Essayez peut-être de rapprocher les points des routes ?",
+    "profile-error": "Erreur de profil : pas de réponse ou réponse invalide du serveur",
+    "temporary-profile": "<strong>Note :</strong> Les profils personnalisés téléversés ne sont disponibles que temporairement sur le serveur.<br/>Merci de sauvegarder votre profil sur votre ordinateur.",
+    "upload-error": "Erreur d'envoi : {{error}}"
   }
 }
