--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -115,20 +115,20 @@
       "custom": "自訂",
       "fastbike": "機車",
       "fastbike-asia-pacific": "機車 (亞太)",
-      "fastbike-lowtraffic": "機車 (低交通流量)",
+      "fastbike-lowtraffic": "Fastbike (low traffic)",
       "hiking-beta": "遠足 (Beta測試中)",
       "moped": "機慢車",
       "rail": "鐵道",
       "river": "河道",
       "safety": "安全",
       "shortest": "最短",
-      "trekking": "徒步旅行",
-      "trekking-ignore-cr": "徒步旅行 (跳過自行車道)",
-      "trekking-noferries": "徒步旅行 (跳過渡輪)",
-      "trekking-nosteps": "徒步旅行 (跳過階梯)",
-      "trekking-steep": "極限徒步旅行",
-      "vm-forum-liegerad-schnell": "vm-forum-liegerad-schnell",
-      "vm-forum-velomobil-schnell": "vm-forum-velomobil-schnell"
+      "trekking": "Trekking bike",
+      "trekking-ignore-cr": "Trekking bike (ignore cycle routes)",
+      "trekking-noferries": "Trekking bike (no ferries)",
+      "trekking-nosteps": "Trekking bike (no steps)",
+      "trekking-steep": "Trekking bike (steep)",
+      "vm-forum-liegerad-schnell": "Recumbent bike (fast)",
+      "vm-forum-velomobil-schnell": "Velomobile (fast)"
     }
   },
   "sidebar": {
